# localGPT

./: ask  build  constants.py  ingest.py  pyproject.toml  run_localGPT.py
